[package]
name = "bootuefi"
version = "0.1.0"
authors = ["韩朴宇 <w12101111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0"
wait-timeout = "0.2"
locate-cargo-manifest = "0.1"
toml = "0.5"
failure = "0.1"

[dependencies.cargo_metadata]
version = "0.8"
default-features = false
