[package]
name = "bootuefi"
version = "0.1.0"
description = "A tool for running and testing Rust UEFI project."
keywords = ["uefi", "osdev", "qemu"]
license = "MIT/Apache-2.0"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/bootuefi"
homepage = "https://github.com/12101111/bootuefi"
edition = "2018"

[dependencies]
tempfile = "3.0"
wait-timeout = "0.2"
locate-cargo-manifest = "0.1"
toml = "0.5"
failure = "0.1"

[dependencies.cargo_metadata]
version = "0.8"
default-features = false
